Add SBT versions 0.12.2 and 0.12.4.